fix photo stretch AND color of CV link to white

--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ p2 {
    line-height: 2.2;
 } 
 p.grrr{
-   color:  #ffffff;
+   color: #ffffff;
    text-align: center;
    font-size: 14px;  
    font-weight: 100;
@@ -295,11 +295,15 @@ header /*.container*/ {
 
 .containerhero {  /*#dedfe0   mg-i5a4671.jpg  KristaPorfolioPhotov2.png height:100% */
 	background: url("../images/KristaPorfolioPhotov3.png") no-repeat 0 0 scroll;
-	margin-right: auto;
+	margin-top: 100px;
+	background-size: cover;
+    background-position: center;
+    height: 625px;
+	/*FIRST TRY THAT WORKED:  margin-right: auto;
 	background-size: 100% 100%;
     height:725px;
     width:100%;
-	/*margin-left: 75px;
+	deleted...margin-left: 75px;
 	margin-top: 75px;
 	margin-bottom: 0;*/
 }
@@ -492,6 +496,7 @@ header /*.container*/ {
 }
 .link {
 	padding: 75px 0px 0px 0px; /* top right bottom left*/
+	color: #ffffff;
 }
 
 /* PROJECT IMAGES */
